tests/canary_deployment/deploy-and-canary-v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v4
  labels:
    app: reviews
    version: v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v4
  template:
    metadata:
      labels:
        app: reviews
        version: v4
    spec:
      containers:
      - name: reviews
        image: mariogabrielg/examples-bookinfo-reviews-v4:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 30
    - destination:
        host: reviews
        subset: v2
      weight: 30
    - destination:
        host: reviews
        subset: v3
      weight: 30
    - destination:
        host: reviews
        subset: v4
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
  - name: v4
    labels:
      version: v4
